# blog-code

./: readme.md
aws-lambda-sidecar/: readme.md
aws-lambda-sidecar/code/nodejs-demo-api/: Makefile  samconfig.toml  template.yaml
aws-lambda-sidecar/code/nodejs-demo-api/src/: app.ts  package-lock.json  package.json
aws-lambda-sidecar/code/rust-demo-lambda-extension/: Cargo.toml  Makefile  README.md  samconfig.toml  template.yaml
aws-lambda-sidecar/code/rust-demo-lambda-extension/src/: env.rs  extension.rs  main.rs
hyperledger-besu-erc20/: package-lock.json  package.json
langgraph-teams-mcp-database/: README.md  docker-compose.yaml  pyproject.toml
langgraph-teams-mcp-database/langgraph-bot/src/react_agent/: graph.py  tools.py  utils.py
llm-datadog/: blog.md
llm-structured-resilice/: main.ipynb  models.py  prompts.py  pyproject.toml  readme.md
mysql-connections/: Makefile  docker-compose-with-proxy.yml  docker-compose.yml  my.cnf  prometheus.yml  proxysql.cnf  readme.md
mysql-connections/grafana/provisioning/dashboards/: dashboard-mysql-connections.json
mysql-connections/init/: init.sql
mysql-connections/test-app/: main.py  pyproject.toml  test_connection.py
mysql-database/: README.md  docker-compose.yml
mysql-database/init/: 01-init.sql
