[project]
name = "langgraph-teams-mcp-database"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Nascimento",email = "victooyooth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph-cli[inmem] (>=0.3.8,<0.4.0)",
    "black (>=25.1.0,<26.0.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.23,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
