[project]
name = "llm-structured-resilice"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Nascimento",email = "victooyooth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.5,<0.7.0)",
    "openai (>=1.99.9,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "docling (>=2.44.0,<3.0.0)",
    "langchain-deepseek (>=0.1.4,<0.2.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "instructor (>=1.10.0,<2.0.0)",
    "trustcall (>=0.0.39,<0.0.40)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
