[package]
name = "rust-demo-lambda-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
log = "0.4"
env_logger = "0.11.8"
reqwest = { version = "0.11", default-features = false,features = ["json","rustls-tls"] }
once_cell = "1.21.3"
